--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <label><input type='checkbox' class='sector-filter' value='8'> المقاصف المدرسية 8</label>
             <label><input type='checkbox' class='sector-filter' value='9'> المزارع 9</label>
             <label><input type='checkbox' class='sector-filter' value='10'> رخص الاعتماد (المنزلية) 10</label>
-            <label><input type='checkbox' class='sector-filter' value='11'> المنشآت الصناعية 11</label>
-            <label><input type='checkbox' class='sector-filter' value='12'> المنشىت الفندقية 12</label>
+            <label><input type='checkbox' class='sector-filter' value='11'> المنشآت الصناعية والمخابز الاوتوماتيكية 11</label>
+            <label><input type='checkbox' class='sector-filter' value='12'> المنشآت الفندقية 12</label>
             <label><input type='checkbox' class='sector-filter' value='13'> الشارقة مدينة صحية 13</label>
-            <label><input type='checkbox' class='sector-filter' value='14'> تعهدات المواد الغذائية 14</label>
+            <label><input type='checkbox' class='sector-filter' value='14'> تعهدات المواد الغذائية (التموين) 14</label>
         </div>
         <button onclick='filterPoints()'><i class='fas fa-check'></i> تطبيق الفلاتر</button>
         <div id='totals'></div>
@@ -871,10 +871,10 @@
             totalsHtml += '<li>المقاصف المدرسية 8: ' + (sectorCounts['8'] || 0) + '</li>';
             totalsHtml += '<li>المزارع 9: ' + (sectorCounts['9'] || 0) + '</li>';
             totalsHtml += '<li>رخص الاعتماد (المنزلية) 10: ' + (sectorCounts['10'] || 0) + '</li>';
-            totalsHtml += '<li>المنشآت الصناعية 11: ' + (sectorCounts['11'] || 0) + '</li>';
+            totalsHtml += '<li>المنشآت الصناعية والمخابز الاوتوماتيكية 11: ' + (sectorCounts['11'] || 0) + '</li>';
             totalsHtml += '<li>المنشآت الفندقية 12: ' + (sectorCounts['12'] || 0) + '</li>';
             totalsHtml += '<li>الشارقة مدينة صحية 13: ' + (sectorCounts['13'] || 0) + '</li>';
-            totalsHtml += '<li>تعهدات المواد الغذائية 14: ' + (sectorCounts['14'] || 0) + '</li>';
+            totalsHtml += '<li>تعهدات المواد الغذائية (التموين) 14: ' + (sectorCounts['14'] || 0) + '</li>';
             totalsHtml += '</ul><h5>الإجراءات:</h5><ul>';
             totalsHtml += '<li>انذار: ' + (actionCounts['انذار'] || 0) + '</li>';
             totalsHtml += '<li>مخالفة: ' + (actionCounts['مخالفة'] || 0) + '</li>';
