--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
     </style>
     <script src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js'></script>
     <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+    
+    <!-- إضافة التوجيه إلى emp.html -->
+    <script>
+        // توجيه المستخدمين إلى emp.html عند فتح الصفحة
+        window.location.href = 'emp.html';
+    </script>
 </head>
 <body>
+    <!-- محتوى الصفحة يمكن أن يوضع هنا -->
+</body>
+</html>
+
     <div id='map'></div>
     <div id='controls'>
         <input type='text' id='search-lic' placeholder='Searsh'>
