--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 '31525': { password: '31525', empname: 'محمد الكاشف' },
                 '31482': { password: '31482', empname: 'زهراء عبدالله' },
                 '25555': { password: '25555', empname: 'عادل عمر' },
-                '4387': { password: '4387', empname: 'توفيق محمد عيسى' },
+                '27407': { password: '27407', empname: 'يحيي السوقي' },
                 '22005': { password: '22005', empname: 'اسد حسن' },
                 '29170': { password: '29170', empname: 'نسيم عبدالناصر' },
                 '22098': { password: '22098', empname: 'رسمي جميل الصحناوي' },
