--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 '28330': { password: '28330', empname: 'محمد ابراهيم عبدالمولى' },
                 '29142': { password: '29142', empname: 'محمد النذير' },
                 '22171': { password: '22171', empname: 'ابراهيم محمد انور' },
-                '22183': { password: '22183', empname: 'عصام خليفة' },
+                '25627': { password: '25627', empname: 'احلام صالح' },
                 'ADMIN': { password: 'mmm332', empname: 'ADMIN' },
                 '19929': { password: '19929', empname: 'اياد ابراهيم' },
                 '27222': { password: '27222', empname: 'اسامة البنداري' },
@@ -111,6 +111,7 @@
                 '33195': { password: '33195', empname: 'محمد السويدي' },
                 '33158': { password: '33158', empname: 'راشد الحمادي' },
                 '33191': { password: '33191', empname: 'حمد المازمي' },
+                '33511': { password: '33511', empname: 'فاطمة عبدالله' },
                 '33109': { password: '33109', empname: 'عبدالله الشامسي' },
                 '32976': { password: '32976', empname: 'عبدالله مروان' },
                 '32978': { password: '32978', empname: 'اسماعيل عيسي' },
