--- a/cmap.html
+++ b/cmap.html
@@ -177,7 +177,7 @@ function sendEmail() {
         var map = L.map('map').setView([25.276987, 55.296249], 10);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-ش        }).addTo(map);
+        }).addTo(map);
         var allPointsLayer = L.layerGroup().addTo(map);
         var pointsData = [];
         pointsData.push({latitude: 25.358770318204822, longitude: 55.5836806383173, AREA2: 'كشيشة1 ضاحية الرحمانية فيلا 5666', sector: 7, color: 'cyan', lightColor: 'lightcyan', sectorColor: 'firebrick', fname: 'كوب وفتات للماكولات', area: 'كشيشة 1', subarea: '', BrandName: 'cup-crumble', FacilityStatus: 'نشط', lic: '917742', subunit: ''});
