--- a/cmap.html
+++ b/cmap.html
@@ -44,7 +44,7 @@
             <label><input type='checkbox' class='action-filter' value='انذار'> انذار</label>
             <label><input type='checkbox' class='action-filter' value='مخالفة'> مخالفة</label>
             <label><input type='checkbox' class='action-filter' value='عينات'> عينات</label>
-            <label><input type='checkbox' class='action-filter' value='متابعة انذار'> متابعة انذار</label>
+            <label><input type='checkbox' class='action-filter' value='متابعة'> متابعة</label>
             <label><input type='checkbox' class='action-filter' value='مغلق'> مغلق</label>
             <label><input type='checkbox' class='action-filter' value='تقرير'> تقرير</label>
             <label><input type='checkbox' class='action-filter' value='مناسب'> مناسب</label>
