--- a/cmap.html
+++ b/cmap.html
@@ -64,6 +64,8 @@
             <label><input type='checkbox' class='sector-filter' value='11'> المزارع 11</label>
         </div>
         <button onclick='filterPoints()'><i class='fas fa-check'></i> تطبيق الفلاتر</button>
+    <button id="search-warning" onclick="findNearestWarning()">🔎 البحث عن إنذار قريب</button>
+
         <hr>
         <label>من تاريخ:</label>
         <input type='date' id='date-from'>
