--- a/cmap.html
+++ b/cmap.html
@@ -36,7 +36,8 @@
     <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
 </head>
 <body>
-    <div id='map'></div>
+<div id='map'></div>
+
     <div id='controls'>
         <input type='text' id='search-lic' placeholder='Searsh'>
         <button onclick="toggleVisibility('action-filters')"><i class='fas fa-filter'></i> الإجراء</button>
@@ -64,7 +65,6 @@
             <label><input type='checkbox' class='sector-filter' value='11'> المزارع 11</label>
         </div>
         <button onclick='filterPoints()'><i class='fas fa-check'></i> تطبيق الفلاتر</button>
-    <button id="search-warning" onclick="findNearestWarning()">🔎 البحث عن إنذار قريب</button>
 
         <hr>
         <label>من تاريخ:</label>
@@ -99,6 +99,14 @@
 
  
 </div>
+<div id="modeSelector">
+    <label>اختيار الوضع:</label>
+    <select id="mode">
+        <option value="walk">🚶‍♂️ مشي</option>
+        <option value="car">🚗 سيارة</option>
+    </select>
+</div>
+
 <script>
 // الدالة لإرسال البيانات عبر واتساب
 function sendWhatsApp() {
@@ -10642,15 +10650,12 @@ function sendEmail() {
 
 <script>
 
-// إضافة تنبيه بالصوت
 var alertAudio = new Audio('https://www.soundjay.com/button/beep-07.wav');
 
-// طلب صلاحيات الإشعار
 if ("Notification" in window && Notification.permission !== "granted") {
     Notification.requestPermission();
 }
 
-// حساب المسافة بين نقطتين
 function getDistance(lat1, lon1, lat2, lon2) {
     const R = 6371e3;
     const φ1 = lat1 * Math.PI / 180;
@@ -10662,56 +10667,47 @@ function getDistance(lat1, lon1, lat2, lon2) {
               Math.cos(φ1) * Math.cos(φ2) *
               Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
     const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-
     return R * c;
 }
 
-// حساب زمن القيادة
 function getDrivingTimeInMinutes(distanceMeters) {
-    const speedMetersPerMinute = 667; // 40 كم/س
+    const mode = document.getElementById("mode").value;
+    const speedMetersPerMinute = (mode === 'car') ? 667 : 83.33;
     return distanceMeters / speedMetersPerMinute;
 }
 
-// البحث عن أقرب إنذار
-function findNearestWarning() {
-    if (!navigator.geolocation) {
-        alert("الموقع الجغرافي غير مدعوم في هذا المتصفح.");
-        return;
-    }
+let notified = new Set();
 
-    navigator.geolocation.getCurrentPosition(position => {
-        const userLat = position.coords.latitude;
-        const userLon = position.coords.longitude;
-        let nearestPoint = null;
-        let minTime = Infinity;
+function checkNearbyWarnings() {
+    if (!navigator.geolocation) return;
+    navigator.geolocation.getCurrentPosition(pos => {
+        const userLat = pos.coords.latitude;
+        const userLon = pos.coords.longitude;
 
         pointsData.forEach(point => {
             if (point.action === 'انذار') {
                 const distance = getDistance(userLat, userLon, point.latitude, point.longitude);
                 const time = getDrivingTimeInMinutes(distance);
-                if (time <= 10 && time < minTime) {
-                    nearestPoint = point;
-                    minTime = time;
+                if (time <= 10 && !notified.has(point.fname)) {
+                    const msg = `📍 ${point.fname} على بعد ${Math.round(time)} دقيقة.`;
+                    try {
+                        if ("Notification" in window && Notification.permission === "granted") {
+                            new Notification("🚨 إنذار قريب", { body: msg });
+                        } else {
+                            alert(msg);
+                        }
+                    } catch (e) {
+                        alert(msg);
+                    }
+                    alertAudio.play();
+                    notified.add(point.fname);
                 }
             }
         });
-
-        if (nearestPoint) {
-            const message = `🔔 أقرب إنذار: ${nearestPoint.fname} على بعد ${Math.round(minTime)} دقيقة.`;
-            if ("Notification" in window && Notification.permission === "granted") {
-                new Notification("إنذار قريب", { body: message });
-            } else {
-                alert(message);
-            }
-            alertAudio.play();
-            window.open(`https://www.google.com/maps/dir/?api=1&destination=${nearestPoint.latitude},${nearestPoint.longitude}`, '_blank');
-        } else {
-            alert("❌ لا توجد إنذارات قريبة خلال 10 دقائق بالسيارة.");
-        }
-    }, error => {
-        alert("خطأ في تحديد الموقع.");
     });
 }
+
+setInterval(checkNearbyWarnings, 30000);
 </script>
 </body>
 </html>
