--- a/cmap.html
+++ b/cmap.html
@@ -10646,7 +10646,7 @@ function sendEmail() {
     </script>
 
 <script>
-// صوت التنبيه
+// تشغيل صوت عند وجود تنبيه
 var alertAudio = new Audio('https://www.soundjay.com/button/beep-07.wav');
 
 // طلب إذن الإشعارات
@@ -10654,7 +10654,7 @@ if ("Notification" in window && Notification.permission !== "granted") {
     Notification.requestPermission();
 }
 
-// دالة حساب المسافة
+// دالة لحساب المسافة بين نقطتين
 function getDistance(lat1, lon1, lat2, lon2) {
     const R = 6371e3;
     const φ1 = lat1 * Math.PI / 180;
@@ -10662,24 +10662,24 @@ function getDistance(lat1, lon1, lat2, lon2) {
     const Δφ = (lat2 - lat1) * Math.PI / 180;
     const Δλ = (lon2 - lon1) * Math.PI / 180;
 
-    const a = Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
+    const a = Math.sin(Δφ/2) * Math.sin(Δφ/2) +
               Math.cos(φ1) * Math.cos(φ2) *
-              Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-    const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+              Math.sin(Δλ/2) * Math.sin(Δλ/2);
+    const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
     return R * c;
 }
 
-// دالة حساب زمن القيادة أو المشي
+// دالة لحساب الزمن بناءً على الوضع المختار
 function getDrivingTimeInMinutes(distanceMeters) {
     const mode = document.getElementById("mode").value;
     const speedMetersPerMinute = (mode === 'car') ? 667 : 83.33;
     return distanceMeters / speedMetersPerMinute;
 }
 
-// سجل الإشعارات لمنع التكرار
+// تخزين النقاط التي تم الإشعار عنها
 let notified = new Set();
 
-// دالة التحقق من الانذارات القريبة
+// دالة لفحص النقاط القريبة
 function checkNearbyWarnings() {
     if (!navigator.geolocation) return;
     navigator.geolocation.getCurrentPosition(pos => {
@@ -10691,17 +10691,19 @@ function checkNearbyWarnings() {
                 const distance = getDistance(userLat, userLon, point.latitude, point.longitude);
                 const time = getDrivingTimeInMinutes(distance);
                 if (time <= 10 && !notified.has(point.fname)) {
-                    const msg = `📍 ${point.fname} على بعد ${Math.round(time)} دقيقة.`;
-                    try {
-                        if ("Notification" in window && Notification.permission === "granted") {
-                            new Notification("🚨 إنذار قريب", { body: msg });
-                        } else {
-                            alert(msg);
-                        }
-                    } catch (e) {
-                        alert(msg);
-                    }
+                    const msg = `
+📍 الاسم: ${point.fname}
+📍 المنطقة: ${point.area}
+📄 الرخصة: ${point.lic}
+🏢 القطاع: ${point.sector}
+📅 آخر زيارة: ${point.Fdate}
+⏳ الزمن المتوقع للوصول: ${Math.round(time)} دقيقة
+                    `;
                     alertAudio.play();
+                    const confirmReview = confirm(msg + "هل ترغب بالمراجعة الآن؟");
+                    if (confirmReview) {
+                        window.open(`https://www.google.com/maps/dir/?api=1&destination=${point.latitude},${point.longitude}`, '_blank');
+                    }
                     notified.add(point.fname);
                 }
             }
@@ -10709,13 +10711,13 @@ function checkNearbyWarnings() {
     });
 }
 
-// فحص الإنذارات كل 30 ثانية
+// التحقق التلقائي كل 30 ثانية
 setInterval(checkNearbyWarnings, 30000);
 
-// 🔥 تفعيل الفحص مباشرة عند تغيير الوضع
+// عند تغيير وضع المشي/السيارة يتم الفحص مباشرة
 document.getElementById("mode").addEventListener("change", () => {
-    notified.clear();       // مسح التنبيهات القديمة
-    checkNearbyWarnings();  // فحص فوري بالوضع الجديد
+    notified.clear();
+    checkNearbyWarnings();
 });
 </script>
 
