--- a/wcs.html
+++ b/wcs.html
@@ -2,7 +2,7 @@
 <html lang='ar' dir='rtl'>
 <head>
     <meta charset='utf-8'>
-    <title>Sharjah Municipality Food Control Section Map</title>
+    <title>Sharjah Municipality Waste Control SectionMap</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css' />
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' />
